# ui/src/types/openapi/frontend/v1alpha1/service_registry.swagger.json
@@ -775,6 +775,14 @@
             "$ref": "#/definitions/v1alpha1EnvoyFilter"
           },
           "description": "envoy_filters are EnvoyFilter resources affecting this instance."
+        },
+        "peerAuthentications": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1alpha1PeerAuthentication"
+          },
+          "description": "peer_authentications are PeerAuthentication resources affecting this instance."
         }
       },
       "description": "GetIstioResourcesResponse contains the Istio resources for the requested service instance."
@@ -1052,6 +1060,28 @@
         }
       },
       "title": "PathMatchInfo contains HTTP path matching information"
+    },
+    "v1alpha1PeerAuthentication": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "description": "name is the name of the peer authentication."
+        },
+        "namespace": {
+          "type": "string",
+          "description": "namespace is the namespace of the peer authentication."
+        },
+        "rawSpec": {
+          "type": "string",
+          "description": "raw_spec is the peer authentication spec as a JSON string."
+        },
+        "selector": {
+          "$ref": "#/definitions/v1alpha1WorkloadSelector",
+          "description": "selector is the criteria used to select the specific set of pods/VMs."
+        }
+      },
+      "description": "PeerAuthentication represents an Istio PeerAuthentication resource."
     },
     "v1alpha1PolicyTargetReference": {
       "type": "object",
